// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card displays a Card with actions 1`] = `
<div>
  <div
    class="mui-box-mock"
  >
    <div
      class="mui-box-mock"
    >
      actions
    </div>
  </div>
</div>
`;

exports[`Card displays a Card with content 1`] = `
<div>
  <div
    class="mui-box-mock"
  >
    <div
      class="mui-box-mock"
    >
      content
    </div>
  </div>
</div>
`;

exports[`Card displays a Card with headers 1`] = `
<div>
  <div
    class="mui-box-mock"
  >
    <div
      class="mui-box-mock"
    >
      header
    </div>
  </div>
</div>
`;
